data/derived/comb/progs/unify/prog5852.ml.out
Characters 185-225:
  | Average (e1,e2)      -> (((exprToString e1) +. (exprToString e2)) / 2)
                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type float but an expression was expected of type
         int
